@@ -1,6 +1,8 @@
 20080119
  - (djm) Silence noice from expr in ssh-copy-id; patch from
    mikel AT mikelward.com
+ - (djm) Only listen for IPv6 connections on AF_INET6 sockets; patch from
+   tsr2600 AT gmail.com
 
 20080102
  - (dtucker) [configure.ac] Fix message for -fstack-protector-all test.
@@ -3523,4 +3525,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4818 2008/01/19 18:52:04 djm Exp $
+$Id: ChangeLog,v 1.4819 2008/01/19 21:56:00 djm Exp $
